--- a/DiandianIOS/DiandianIOS/DAMyTableViewCell.xib
+++ b/DiandianIOS/DiandianIOS/DAMyTableViewCell.xib
@@ -7,13 +7,13 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="zQa-zO-Ab7">
-            <rect key="frame" x="0.0" y="0.0" width="193" height="200"/>
+            <rect key="frame" x="0.0" y="0.0" width="189" height="200"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="193" height="200"/>
+                <rect key="frame" x="0.0" y="0.0" width="189" height="200"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="table.png" translatesAutoresizingMaskIntoConstraints="NO" id="Edt-Gx-nOD">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="table1.png" translatesAutoresizingMaskIntoConstraints="NO" id="Edt-Gx-nOD">
                         <rect key="frame" x="4" y="4" width="185" height="158"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     </imageView>
@@ -26,9 +26,10 @@
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
+            <size key="customSize" width="189" height="200"/>
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="table.png" width="270" height="225"/>
+        <image name="table1.png" width="175" height="150"/>
     </resources>
 </document>
