--- a/DiandianIOS/DiandianIOS/DAMyBigMenuBookCell.xib
+++ b/DiandianIOS/DiandianIOS/DAMyBigMenuBookCell.xib
@@ -6,7 +6,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="OT7-Y8-7n7">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="OT7-Y8-7n7" customClass="DAMyMenuBookCell">
             <rect key="frame" x="0.0" y="0.0" width="693" height="680"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -35,6 +35,9 @@
                         <state key="normal" title="＋">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
+                        <connections>
+                            <action selector="addMenu:" destination="OT7-Y8-7n7" eventType="touchUpInside" id="rZy-ei-Vjh"/>
+                        </connections>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N1Y-dA-DsJ">
                         <rect key="frame" x="547" y="539" width="30" height="30"/>
