--- a/DiandianIOS/DiandianIOS/DAMyMenuBookCell.xib
+++ b/DiandianIOS/DiandianIOS/DAMyMenuBookCell.xib
@@ -38,21 +38,14 @@
                         </state>
                     </button>
                     <button opaque="NO" tag="13" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Bz-Ie-2v7">
-                        <rect key="frame" x="46" y="159" width="30" height="30"/>
+                        <rect key="frame" x="8" y="159" width="45" height="30"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <state key="normal" title="＋">
+                        <state key="normal" title="来一份">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                         <connections>
                             <action selector="addMenu:" destination="819-cv-spH" eventType="touchUpInside" id="NuV-N4-UNu"/>
                         </connections>
-                    </button>
-                    <button opaque="NO" tag="14" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kXy-45-btb">
-                        <rect key="frame" x="8" y="159" width="30" height="30"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <state key="normal" title="－">
-                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                        </state>
                     </button>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
