--- a/DiandianIOS/DiandianIOS/DAMyMenuBookViewController.xib
+++ b/DiandianIOS/DiandianIOS/DAMyMenuBookViewController.xib
@@ -19,16 +19,11 @@
                     <rect key="frame" x="0.0" y="0.0" width="703" height="700"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" white="0.84286610399999995" alpha="1" colorSpace="calibratedWhite"/>
-                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="SXM-wL-SHA">
-                        <size key="itemSize" width="224" height="200"/>
-                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                        <inset key="sectionInset" minX="10" minY="3" maxX="10" maxY="77"/>
-                    </collectionViewFlowLayout>
+                    <collectionViewLayout key="collectionViewLayout" id="vog-Zc-K4z" customClass="RFQuiltLayout"/>
                     <cells/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="egD-Tz-WSy"/>
-                        <outlet property="delegate" destination="-1" id="bIT-bx-lfp"/>
+                        <outlet property="delegate" destination="-1" id="r5q-tv-9MX"/>
                     </connections>
                 </collectionView>
             </subviews>
